--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name":        "groc",
-  "version":     "0.8.0",
-  "description": "Documentation generation, in the spirit of literate programming.",
-  "keywords":   ["documentation", "docs", "generator"],
-  "homepage":    "http://nevir.github.com/groc/",
-  "author":      "Ian MacLeod <ian@nevir.net> (https://github.com/nevir)",
+  "name":         "mlmgroc",
+  "version":      "0.1.0",
+  "description":  "mlmgroc extracts documentation from source code",
+  "keywords":     ["documentation", "docs", "extract"],
+  "homepage":     "https://github.com/matthewlmcclure/groc",
+  "author":       "Matt McClure <identity@matthewlmcclure.com> (http://matthewlmcclure.com/)",
+  "contributors": ["Ian MacLeod <ian@nevir.net> (https://github.com/nevir)"],
 
   "licenses": [{
     "type": "MIT",
-    "url":  "https://github.com/nevir/groc/MIT-LICENSE.txt"
+    "url":  "https://github.com/matthewlmcclure/groc/MIT-LICENSE.txt"
   }],
 
   "repository": {
     "type": "git",
-    "url":  "https://github.com/nevir/groc"
+    "url":  "https://github.com/matthewlmcclure/groc"
   },
 
   "main": "./index",
@@ -25,16 +26,14 @@
   },
 
   "engines": {
-    "node": ">= 0.8"
+    "node": ">= 4.4.4"
   },
   "dependencies": {
     "coffee-script": "^1.6.3",
-    "colors": "^0.6.2",
     "fs-tools": "^0.2.10",
     "glob": "^3.2.7",
     "optimist": "^0.6.0",
     "spate": "^0.1.0",
-    "uglify-js": "^2.4.6",
     "underscore": "^1.6.0",
     "yamljs": "^0.2.7"
   },
