--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name":         "mlmgroc",
+  "name":         "Lade",
   "version":      "0.1.0",
-  "description":  "mlmgroc extracts documentation from source code",
+  "description":  "Lade is a language-agnostic documentation extractor",
   "keywords":     ["documentation", "docs", "extract"],
-  "homepage":     "https://github.com/matthewlmcclure/groc",
+  "homepage":     "https://github.com/matthewlmcclure/lade",
   "author":       "Matt McClure <identity@matthewlmcclure.com> (http://matthewlmcclure.com/)",
   "contributors": ["Ian MacLeod <ian@nevir.net> (https://github.com/nevir)"],
 
   "licenses": [{
     "type": "MIT",
-    "url":  "https://github.com/matthewlmcclure/groc/MIT-LICENSE.txt"
+    "url":  "https://github.com/matthewlmcclure/lade/MIT-LICENSE.txt"
   }],
 
   "repository": {
     "type": "git",
-    "url":  "https://github.com/matthewlmcclure/groc"
+    "url":  "https://github.com/matthewlmcclure/lade"
   },
 
   "main": "./index",
@@ -22,7 +22,7 @@
     "lib": "./lib"
   },
   "bin": {
-    "groc": "./bin/groc"
+    "lade": "./bin/lade"
   },
 
   "engines": {
